kustomize/overlays/beta/fintlabs-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-personvern-kodeverk
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && (PathPrefix( `/personvern/kodeverk`))"
      kind: Rule
      services:
        - name: fint-core-consumer-personvern-kodeverk
          port: 8080
